client/src/components/styles/SearchResults.module.css
.searchResults {
  margin-right: 30px;
}

.uelnNumber {
  font-weight: 600;
  font-size: 1.3rem;
  margin: 0 0 10px;
  padding: 0;
}

.searchResultsHeading {
  font-weight: 400;
}

.datesOuter {
  display: flex;
}

.datesContainer {
  display: flex;
  flex-direction: column;
  margin: 10px 0 20px;
  width: 50%;
  display: flex;
}

.datesLabel {
  font-size: 0.7rem;
  font-weight: 500;
}

.datesValue {
  font-size: 1rem;
  font-weight: 600;
}

.locationResults {
  border-top: 1px solid #999;
  font-size: 0.7rem;
  font-weight: 400;
}

.resultItem {
  display: flex;
  text-align: left;
  border-bottom: 1px solid #999;
  padding: 10px 0 10px 0;
  position: relative;
  cursor: pointer;
}

.resultItemWrapper {
  padding-left: 2px;
}

.location {
  font-weight: 500;
}

.toggleDisplay {
  display: flex;
  width: 100%;
  margin-bottom: 20px;
  font-size: 0.7rem;
}

.btnLocationsSelected {
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  border: 1px solid #999;
  border-right: none;
  width: 80px;
  padding: 6px;
  text-align: center;
  background-color: #fff;
  box-shadow: none;
  cursor: pointer;
}

.btnHeatmap {
  cursor: pointer;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
  border: 1px solid #999;
  width: 80px;
  padding: 6px;
  text-align: center;
  background-color: #eee;
  box-shadow: inset 0 0 5px #ccc;
}

